--- a/style.css
+++ b/style.css
@@ -1,38 +1,81 @@
 
-div{
-	box-sizing: border-box;
-}
-
-header {
-	background: white;
-	padding: 10px;
-}
-
-header h1 {
-	margin: 0;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 
-div.post img, img{
-	width: 100%;
+img {
+    width: 100%;
+    display: block;
 }
 
-div.post .post-header div:first-child{
-	display: inline-block;
-	width: 80%;
+div.post img {
+    width: 100%;
 }
 
-div.post .post-header div:last-child{
-	display: inline-block;
-	width: 20%;	
-	padding: 10px;
-	text-align: right;
-	color: grey;
+div.post .post-header div:first-child {
+    display: inline-block;
+    width: 80%;
 }
 
-div.post h2, div.post p , b {
-	padding: 4px;
-	margin: 0;
+div.post .post-header div:last-child {
+    display: inline-block;
+    width: 20%;
+    padding: 10px;
+    text-align: right;
+    color: grey;
+}
+
+div.post h2,
+div.post p,
+b {
+    padding: 4px;
+    margin: 0;
+}
+
+div.border {
+    background: rgb(240, 240, 240);
+    margin-top: 40px;
+}
+
+
+.custom-fixed-container {
+    width: 600px;
+    margin: auto;
+}
+
+
+.navbar {
+    margin: auto;
+    width: auto;
+}
+
+.navbar-brand {
+    margin-left: 10px;
+}
+
+.brand-name {
+    margin-top: 5px;
+}
+
+
+.gallery-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2px;
+}
+
+
+.gallery-col {
+    height: 200px;
+}
+
+.container-override {
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 
@@ -40,40 +83,3 @@ div.container{
 	width: 600px;
 	margin: auto;
 }
-
-div.border{
-	background: rgb(240, 240, 240);
-	margin-top: 10%;
-}
-
-
-.col{
-    
-    height: 200px; 
-    
-  }
-
-.navbar {
-    margin: auto;
-	width: auto;
-	margin: auto;
-}
-
-.gallery-img {
-    width: 100%;
-    height: 350px;
-    border-radius: 8px;
-  }
-
-  .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-	margin-left: 40px;
-	margin-right: 40px;
-  }  
-
-  .navbar-brand {
-	margin-left: 10px;
-  }
-  
-  .brand-name{
-	margin-top: 5px;
-  }
